--- a/.docker/rootfs/etc/nginx/nginx.conf
+++ b/.docker/rootfs/etc/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     keepalive_timeout  65;
 
     #https://www.buildersociety.com/threads/block-unwanted-bots-on-apache-nginx-constantly-updated.1898/
-	map $http_user_agent $limit_bots {
+    map $http_user_agent $limit_bots {
          default 0;
          ~*(ahrefsbot|alexibot|appengine|aqua_products|archive.org_bot|archive|asterias|attackbot|b2w|backdoorbot|becomebot|blackwidow|blekkobot) 1;
          ~*(blowfish|botalot|builtbottough|bullseye|bunnyslippers|ccbot|cheesebot|cherrypicker|chinaclaw|chroot|clshttp|collector) 1;
@@ -43,11 +43,14 @@ http {
         server_name tasmoadmin.local;
         listen 80 default_server;
         root /var/www/tasmoadmin/;
-        index index.php;
 
         fastcgi_buffer_size 512k;
         fastcgi_buffers 16 512k;
 
+
+        location / {
+            try_files $uri /index.php$is_args$args;
+        }
 
         location /data/firmwares {
             add_header Access-Control-Allow-Origin *;
@@ -57,38 +60,28 @@ http {
             deny all;
         }
 
-        location ~ .php$ {
-            fastcgi_pass 127.0.0.1:9001;
-            fastcgi_read_timeout 900;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
-        }
-
         location ~ ^(.*)\.(css|js|gif||jpe?g|png|json|cache\.json)$ {
         }
 
-        location / {
-        	#blocks blank user_agents
-			if ($http_user_agent = "") {
-				return  301 $scheme://www.google.com/;
-			}
+        location ~ ^/index\.php(/|$) {
+           #blocks blank user_agents
+            if ($http_user_agent = "") {
+                return  301 $scheme://www.google.com/;
+            }
 
-		    if ($limit_bots = 1) {
-				return  301 $scheme://www.google.com/;
-		    }
+            if ($limit_bots = 1) {
+                return  301 $scheme://www.google.com/;
+            }
 
-            rewrite ^/login$ /login.php last;
-            rewrite ^/logout$ /login.php?logout=logout last;
-            rewrite ^/doAjaxAll$ /index.php?doAjaxAll=doAjaxAll last;
-            rewrite ^/doAjax$ /index.php?doAjax=doAjax last;
-            rewrite "/([a-z]{2})/" /index.php?lang=$1 last;
-            rewrite ^/([a-zA-Z_]+)/([a-zA-Z_]+)/([0-9_]+)/?$ /index.php?page=$1&action=$2&device_id=$3;
-            rewrite ^/([a-zA-Z_]+)/(force)/?$ /index.php?page=$1&force=1;
-            rewrite ^/([a-zA-Z_]+)/([a-zA-Z_]+)/?$ /index.php?page=$1&action=$2;
-            rewrite ^/([a-zA-Z_]+)/([0-9]+)/?$ /index.php?page=$1&device_id=$2;
-            rewrite ^/([a-zA-Z_]+)/?$ /index.php?page=$1;
+            fastcgi_pass 127.0.0.1:9001;
+            fastcgi_read_timeout 900;
+            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            include fastcgi_params;
+
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $realpath_root;
+
+            internal;
         }
     }
 }
